--- a/demo.html
+++ b/demo.html
@@ -42,5 +42,55 @@
         <a href="https://www.nutc.edu.tw/" target="_blank">國立臺中科技大學(另開視窗)</a>
         <br><br><br><br><br>
         <a href="#up">移到最移到最上面 </a>
+        <hr>
+        <h2>圖片</h2>
+        <img src="https://truth.bahamut.com.tw/s01/201608/bd072bac3d760c68422cba0e1b50d871.JPG" alt="">
+        <img src="123.png"alt=""width="300" height="300">
+        <hr>
+        <h2>列表(o1 u1)</h2>
+        <ol type="I">
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+        </ol>
+        <ul type="square">
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+        </ul>
+        <hr>
+        <h2>輸入(input)</h2>
+        輸入框:
+        <input type="text" value="123">
+        <br>
+        密碼:
+        <input type="password">
+        <br>
+        數字:
+        <input type="number" min="1" max="10">
+        <br>
+        複選:
+        <input type="checkbox">看書
+        <input type="checkbox">打電動
+        <input type="checkbox">運動
+        <br>
+        單選:
+        <input type="radio" name="sex">男生                            
+        <input type="radio" name="sex">女生
+        <input type="radio" name="sex"> 不方便透漏
+        <br>
+        按鈕:
+        <input type="button" value="登入">
+        <input type="button" value="登入2">
+        <button>
+            <img src="123.png" width="15" height="15">
+            登入3
+        </button>
 
-</body></html>
+
+
+
+    
+
+</body>
+</html>
